fixed an issue with the navbar on mobile where hire me was falling beneath the navbar

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -227,6 +227,10 @@
 }
 
 @media screen and (max-width: 768px) {
+    .about {
+        padding-top: 170px;
+    }
+
     #aboutMeTitleContainer {
         margin-bottom: 24px;
     }
